Fixed bug where words in inputbox overflows behind the play/reset button div.

--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -101,7 +101,7 @@ html, body {
     position: absolute;
     bottom: 0;
     left: 15%;
-    width: 80%;
+    width: 75.1%;
     height: 20%;
     background-color: lightgrey;
     z-index: 2;
